分类查询，品牌查询，spu查询，fastdfs上传

--- a/common/service-util/pom.xml
+++ b/common/service-util/pom.xml
@@ -50,6 +50,11 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>net.oschina.zcx7878</groupId>
+            <artifactId>fastdfs-client-java</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
